<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:layout_marginVertical="@dimen/_16dp"
    tools:context="app.gov.uidai.capture.ui.guideline.GuidelineFragment">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_back_button"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Aadhaar logo -->
    <ImageView
        android:id="@+id/img_aadhaar_logo"
        android:layout_width="@dimen/_96dp"
        android:layout_height="@dimen/_96dp"
        android:layout_margin="@dimen/_16dp"
        android:contentDescription="@string/desc_aadhaar_logo"
        android:src="@drawable/ic_aadhaar_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_guideline"
        style="?attr/textAppearanceTitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/title_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_aadhaar_logo" />

    <TextView
        android:id="@+id/subtitle_guideline"
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:text="@string/subtitle_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_debug_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_debug_settings"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:text="@string/btn_debug_settings"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/checkbox_consent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/checkbox_consent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:text="@string/check_acknowledgement"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        app:layout_constraintBottom_toTopOf="@+id/btn_proceed"
        app:layout_constraintStart_toStartOf="parent"
        tools:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:enabled="false"
        android:text="@string/btn_proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>