<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.FrameLayout">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/camera_controller_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_inverseSurface"
        app:cardBackgroundColor="@color/md_theme_inverseSurface"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="?attr/colorOutline"/>

        <LinearLayout
            android:id="@+id/bottom_control_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_horizontal"
            android:paddingTop="@dimen/_24dp"
            android:paddingBottom="@dimen/_8dp">

            <!-- Row of buttons -->
            <LinearLayout
                android:id="@+id/manual_capture_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Torch Button -->
                <ImageButton
                    android:id="@+id/btn_torch"
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Torch Button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_torch_24"
                    app:tint="@color/md_theme_inverseOnSurface" />


                <!-- Capture Button -->
                <ImageButton
                    android:id="@+id/btn_capture"
                    android:layout_width="@dimen/_96dp"
                    android:layout_height="@dimen/_96dp"
                    android:layout_marginHorizontal="@dimen/_48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Torch Button"
                    android:elevation="@dimen/_8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_capture_button" />


                <!-- Focus Slider -->
                <ImageButton
                    android:id="@+id/btn_manual_focus"
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Manual Focus Mode"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_manual_focus"
                    app:tint="@color/md_theme_inverseOnSurface" />

            </LinearLayout>

            <!-- Mode Label -->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mode_toggle_group"
                style="@style/ConFinSDK.ChipGroup.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                app:checkedChip="@+id/chip_auto">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_auto"
                    style="@style/ConFinSDK.Chip.Choice.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/chip_auto" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_manual"
                    style="@style/ConFinSDK.Chip.Choice.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/chip_manual" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_transaction_info"
                style="?attr/textAppearanceLabelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:text="@string/transaction_info"
                android:textColor="@color/md_theme_inverseOnSurface"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_12sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</merge>